# pybudget

./: .gitignore  dashboard.ipynb  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
src/budget/: plot.py  processing.py  summary.py  watcher.py
