[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pybudget"
version = "0.0.1"
description = ""
packages = [{ include = "budget", from = "src" }]
authors = ["Jan Hermann <dev@jan.hermann.name>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
xlrd = "^1.2.0"
watchdog = "^0.10.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.5"
flake8-bugbear = "^19"
flake8-comprehensions = "^2"
flake8-quotes = "^2"
black = "^19-beta.0"
pydocstyle = "^4"
pep8-naming = "^0.8"
isort = "^4.3"

[tool.black]
target-version = ["py37"]
skip-string-normalization = true
